src/com/example/dip/good/NotifierNewProduct.java
package com.example.dip.good;

public interface NotifierNewProduct {

    String notifyNewProduct();
}
