src/com/example/dip/bad/NotifierNewProduct.java
package com.example.dip.bad;

public class NotifierNewProduct {

    public String notifyNewProduct() {
        return "OK";
    }

}
